--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -1,70 +1,13 @@
 ---
-# - name: Update VM
-#   hosts: cp2-vm
-#   become: true
-#   tasks:
-#     - name: playbook.yml | Update all packages
-#       ansible.builtin.apt:
-#         name: "*"
-#         state: latest
-
-#     - name: playbook.yml | Install Podman
-#       ansible.builtin.apt:
-#         name: podman
-#         update_cache: true
-#         state: present
-
-- name: work on podman
+- name: playbook.yml | Run cp2 Role
   hosts: cp2-vm
+  become: true
+  vars_files:
+    - secrets.yml
   tasks:
-    - name: login acr
-      containers.podman.podman_login:
-        username: "{{ acr_user }}"
-        password: "{{ acr_pass }}"
-        registry: "{{ acr_registry }}"
-
-    - name: Descargar imágenes desde Docker Hub (repositorio público)
-      containers.podman.podman_image:
-        name: "docker.io/library/nginx"
-        tag: "latest"
-        state: present
-        pull: yes
-
-    - name: Etiquetar imágenes descargadas para ACR
-      containers.podman.podman_tag:
-        image: "docker.io/library/nginx:latest"
-        target_names: "{{ acr_registry }}/nginx:casopractico2"  # Usamos 'latest' para etiquetar
-        # push: no  # Solo etiquetamos, no subimos aún
-
-    - name: Subir imágenes a ACR
-      containers.podman.podman_image:
-        name: "{{ acr_registry }}/nginx:casopractico2"
-        # tag: "casopractico2"  # Usamos 'latest' para subir
-        push: true
-        validate_certs: false
-
-# - name: Launch webserver
-#   hosts: cp2-vm
-#   become: true
-#   tasks:
-#     - name: login acr
-#       containers.podman.podman_login:
-#         username: "{{ acr_user }}"
-#         password: "{{ acr_pass }}"
-#         registry: "{{ acr_registry }}"
-
-#     - name: Ejecutar nginx como contenedor en podman
-#       containers.podman.podman_container:
-#         name: webserver
-#         image: "{{ acr_registry }}/nginx:casopractico2"
-#         state: started
-#         ports:
-#           - "0.0.0.0:80:80"
-
-# - name: Deploy to AKS
-#   hosts: localhost
-#   # become: true
-#   vars:
+    - name: playbook.yml | Include role
+      ansible.builtin.include_role:
+        name: cp2-role
 ...
  # buscar imagen de azure-vote-front
  # crear fichero .kube/config
