--- a/ansible/roles/cp2-role/vars/main.yml
+++ b/ansible/roles/cp2-role/vars/main.yml
@@ -5,11 +5,14 @@ acr_registry: "cp2acr.azurecr.io"
 
 images:
   - name: "nginx"
+    folder: "front"
     image_path: "docker.io/library/nginx"
     tag: "latest"
   - name: "redis"
+    folder: back
     image_path: "docker.io/bitnami/redis"
     tag: "6.0.8"
   - name: "azure-vote-front"
+    folder: app
     image_path: "docker.io/russo0405/azure-vote-front"
     tag: "v1"
