--- a/ansible/roles/cp2-role/tasks/acr_images.yml
+++ b/ansible/roles/cp2-role/tasks/acr_images.yml
@@ -12,11 +12,12 @@
     state: present
     pull: yes
   loop: "{{ images }}"
+  when: item.pull == true
 
 - name: cp2-role | tasks | acr_images.yml | Tag images
   containers.podman.podman_tag:
     image: "{{ item.image_path }}:{{ item.tag }}"
-    target_names: "{{ acr_registry }}/{{ item.folder }}{{ item.name }}:casopractico2"
+    target_names: "{{ acr_registry }}/{{ item.folder }}/{{ item.name }}:casopractico2"
   loop: "{{ images }}"
 
 - name: cp2-role | tasks | acr_images.yml | Push images into ACR
@@ -25,9 +26,4 @@
     push: true
     validate_certs: false
   loop: "{{ images }}"
-  register: push_images
-
-- name: debug
-  ansible.builtin.debug:
-    var: push_images
 ...
