--- a/ansible/roles/cp2-role/tasks/main.yml
+++ b/ansible/roles/cp2-role/tasks/main.yml
@@ -5,6 +5,10 @@
   ansible.builtin.include_tasks:
     file: prepare_vm.yml
 
+- name: cp2-role | tasks | main.yml | Include configure_webserver.yml tasks
+  ansible.builtin.include_tasks:
+    file: configure_webserver.yml
+
 - name: cp2-role | tasks | main.yml | Include acr_images.yml tasks
   ansible.builtin.include_tasks:
     file: acr_images.yml
