--- a/ansible/roles/cp2-role/tasks/prepare_vm.yml
+++ b/ansible/roles/cp2-role/tasks/prepare_vm.yml
@@ -9,4 +9,14 @@
     name: podman
     update_cache: true
     state: present
+
+- name: cp2-role | tasks | prepare_vm.yml | Install pip
+  ansible.builtin.apt:
+    name: python3-pip
+    state: present
+
+- name: cp2-role | tasks | prepare_vm.yml | Install passlib
+  ansible.builtin.pip:
+    name: passlib
+    state: present
 ...
