--- a/ansible/roles/app_deployment_role/meta/main.yml
+++ b/ansible/roles/app_deployment_role/meta/main.yml
@@ -1,6 +1,6 @@
 galaxy_info:
-  author: your name
-  description: your role description
+  author: Yuri Frezzato Espinosa
+  description: This role deploys one Redis and one azure-vote-front services into Kubernetes Cluster.
   company: your company (optional)
 
   # If the issue tracker for your role is not on github, uncomment the
